--- a/src/drivers/spi/Kconfig
+++ b/src/drivers/spi/Kconfig
@@ -19,7 +19,7 @@
 
 config SPI_FLASH
 	bool
-	default n
+	default y
 	help
 	  Select this option if your chipset driver needs to store certain
 	  data in the SPI flash.
