--- a/src/mainboard/amd/olivehill/Makefile.inc
+++ b/src/mainboard/amd/olivehill/Makefile.inc
@@ -38,8 +38,21 @@ ramstage-y += oem_auth.c
 #BOARDNUM=1  #Used 36
 #MACADDRESS=00-1b-21-b3-a9-63
 
-BOARDNUM=2   #Used 104
-MACADDRESS=be-9b-1d-38-22-f3
+#BOARDNUM=2   #Used 104
+#MACADDRESS=be-9b-1d-38-22-f3
+
+BOARDNUM=$(shell printf %d 0x88)
+MACADDRESS=00-90-27-e0-00-d2
+#OTP=
+#00000000  ff ff ff ff ff ff ff ff  ff ff ff ff ff ff ff ff  |................|
+#*
+#00000020  ff 01 ff ff ff ff ff ff  ff ff ff ff ff ff ff ff  |................|
+#00000030  ff ff ff ff ff ff ff ff  ff ff ff ff ff ff ff ff  |................|
+
+BOARDNUM=$(shell printf %d 0x96)
+MACADDRESS=00-90-27-e0-00-d3
+
+
 
 SHA512SUM=$(if $(shell type sha512sum 2>/dev/null), sha512sum, sha512)
 ENCRIPTION=$(shell echo boardnum$(BOARDNUM) | $(SHA512SUM)  | grep -o "[0-9a-f]*" | sed -e 's/\([0-9a-f]\{2\}\)/\1 /g')
@@ -55,6 +68,7 @@ $(obj)/validation.bin :$(src)/mainboard/$(MAINBOARDDIR)/Makefile.inc
 	LC_ALL=C awk 'BEGIN {for (i=0;i<8;i++){printf ("%c", 255);}}' >> $@.tmp
 	echo $(BOARDNUM) | LC_ALL=C awk '{printf ("%c%c", $$1 % 256, int($$1/256) % 256);}' >> $@.tmp
 	mv $@.tmp $@
+#	cp $(src)/mainboard/$(MAINBOARDDIR)/validation_set.bin $@
 
 cbfs-files-y += olivehill/validation
 olivehill/validation-file := $(obj)/validation.bin
