--- a/src/mainboard/amd/bettong/Kconfig
+++ b/src/mainboard/amd/bettong/Kconfig
@@ -25,6 +25,9 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	select HAVE_MP_TABLE
 	select HAVE_ACPI_TABLES
 	select BOARD_ROMSIZE_KB_8192
+	select EARLY_CBMEM_INIT
+	select RELOCATABLE_MODULES
+	select RELOCATABLE_RAMSTAGE
 	select GFXUMA
 
 config MAINBOARD_DIR
