--- a/src/cpu/amd/pi/00670F01/Kconfig
+++ b/src/cpu/amd/pi/00670F01/Kconfig
@@ -1,7 +1,7 @@
 #
 # This file is part of the coreboot project.
 #
-# Copyright (C) 2011 - 2012 Advanced Micro Devices, Inc.
+# Copyright (C) 2015 Advanced Micro Devices, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -13,16 +13,40 @@
 # GNU General Public License for more details.
 #
 
-ifeq ($(CONFIG_NORTHBRIDGE_AMD_PI),y)
+config CPU_AMD_PI_00670F01
+	bool
+	select PCI_IO_CFG_EXT
+	select X86_AMD_FIXED_MTRRS
 
-subdirs-$(CONFIG_NORTHBRIDGE_AMD_PI_00630F01) += 00630F01
-subdirs-$(CONFIG_NORTHBRIDGE_AMD_PI_00730F01) += 00730F01
-subdirs-$(CONFIG_NORTHBRIDGE_AMD_PI_00660F01) += 00660F01
-subdirs-$(CONFIG_NORTHBRIDGE_AMD_PI_00670F01) += 00670F01
+if CPU_AMD_PI_00670F01
 
-romstage-y += agesawrapper.c
-romstage-y += def_callouts.c
-ramstage-y += agesawrapper.c
-ramstage-y += def_callouts.c
+config CPU_ADDR_BITS
+	int
+	default 48
+
+config EXT_CONF_SUPPORT
+	bool
+	default n
+
+config CBB
+	hex
+	default 0x0
+
+config CDB
+	hex
+	default 0x18
+
+config XIP_ROM_SIZE
+	hex
+	default 0x100000
+
+config HAVE_INIT_TIMER
+	bool
+	default y
+
+config HIGH_SCRATCH_MEMORY_SIZE
+	hex
+	# Assume the maximum size of stack as (0xA0000 - 0x30000 + 0x1000)
+	default 0xA1000
 
 endif
