--- a/src/cpu/amd/pi/Kconfig
+++ b/src/cpu/amd/pi/Kconfig
@@ -18,6 +18,7 @@ config CPU_AMD_PI
 	default y if CPU_AMD_PI_00630F01
 	default y if CPU_AMD_PI_00730F01
 	default y if CPU_AMD_PI_00660F01
+	default y if CPU_AMD_PI_00670F01
 	default n
 	select ARCH_BOOTBLOCK_X86_32
 	select ARCH_VERSTAGE_X86_32
@@ -74,3 +75,4 @@ endif # CPU_AMD_PI
 source src/cpu/amd/pi/00630F01/Kconfig
 source src/cpu/amd/pi/00730F01/Kconfig
 source src/cpu/amd/pi/00660F01/Kconfig
+source src/cpu/amd/pi/00670F01/Kconfig
