--- a/src/mainboard/amd/pademelon/Makefile.inc
+++ b/src/mainboard/amd/pademelon/Makefile.inc
@@ -1,7 +1,7 @@
 #
 # This file is part of the coreboot project.
 #
-# Copyright (C) 2011 - 2012 Advanced Micro Devices, Inc.
+# Copyright (C) 2015 Advanced Micro Devices, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -13,16 +13,13 @@
 # GNU General Public License for more details.
 #
 
-ifeq ($(CONFIG_NORTHBRIDGE_AMD_PI),y)
+romstage-y += BiosCallOuts.c
+romstage-y += PlatformGnbPcie.c
+romstage-y += boardid.c
 
-subdirs-$(CONFIG_NORTHBRIDGE_AMD_PI_00630F01) += 00630F01
-subdirs-$(CONFIG_NORTHBRIDGE_AMD_PI_00730F01) += 00730F01
-subdirs-$(CONFIG_NORTHBRIDGE_AMD_PI_00660F01) += 00660F01
-subdirs-$(CONFIG_NORTHBRIDGE_AMD_PI_00670F01) += 00670F01
-
-romstage-y += agesawrapper.c
-romstage-y += def_callouts.c
-ramstage-y += agesawrapper.c
-ramstage-y += def_callouts.c
-
+ramstage-y += BiosCallOuts.c
+ramstage-y += PlatformGnbPcie.c
+ifeq ($(CONFIG_HUDSON_IMC_FWM), y)
+ramstage-y += fchec.c
 endif
+ramstage-y += boardid.c
