build psp firmware.
Change-Id: I168a65668d4ce512c2946a5b3f0e4fdfadf01f1f

--- a/src/southbridge/amd/pi/hudson/Kconfig
+++ b/src/southbridge/amd/pi/hudson/Kconfig
@@ -80,7 +80,7 @@ config HUDSON_GEC_FWM
 
 config HUDSON_PSP
 	bool
-	default y if CPU_AMD_PI_00730F01 || CPU_AMD_PI_00660F01
+	default y if CPU_AMD_PI_00730F01 || CPU_AMD_PI_00660F01 || CPU_AMD_PI_00670F01
 
 config HUDSON_XHCI_FWM_FILE
 	string "XHCI firmware path and filename"
@@ -131,6 +131,7 @@ config AMD_PUBKEY_FILE
 	string "AMD public Key"
 	default "3rdparty/blobs/southbridge/amd/avalon/PSP/AmdPubKey.bin" if CPU_AMD_PI_00730F01
 	default "3rdparty/blobs/southbridge/amd/kern/PSP/AmdPubKeyCZ.bin" if CPU_AMD_PI_00660F01
+	default "3rdparty/blobs/southbridge/amd/kern/PSP_ST/AmdPubKeyST.bin" if CPU_AMD_PI_00670F01
 
 config HUDSON_SATA_MODE
 	int "SATA Mode"
