--- a/src/northbridge/amd/pi/00670F01/Kconfig
+++ b/src/northbridge/amd/pi/00670F01/Kconfig
@@ -36,7 +36,7 @@ config MMCONF_BUS_NUMBER
 
 config VGA_BIOS_ID
 	string
-	default "1002,9870"
+	default "1002,98e0"
 	help
 	  The default VGA BIOS PCI vendor/device ID should be set to the
 	  result of the map_oprom_vendev() function in northbridge.c.
