todo: booting windows xp slowly.
Change-Id: I927536e4e5f92f23c47dc14a7a53e02ce97cd0d8

--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,8 @@ documentation/skconfig.tex
 documentation/socketfkconfig.tex
 
 doxygen/*
+
+util/crossgcc/xgcc-*/
+
+src/vendorcode/amd/agesa/f1*-*/
+.svn
