otp and flashrom.
Change-Id: I820320e23ba5b3a9d98d8b9f6a978229a593a7e8

--- a/src/mainboard/amd/olivehill/Makefile.inc
+++ b/src/mainboard/amd/olivehill/Makefile.inc
@@ -34,6 +34,9 @@ ramstage-y += oem_auth.c
 # 2. Pick a new BOARDNUM.
 # 3. Define WRITE_OTP as 0, build a coreboot.rom and run.
 # 4. Define WRITE_OTP as 1, build a coreboot.rom which is the image for the board.
+SHA512SUM=$(if $(shell type sha512sum 2>/dev/null), sha512sum, sha512)
+#ENCRIPTION=$(shell echo boardnum$(BOARDNUM) | $(SHA512SUM)  | grep -o "[0-9a-f]*" | sed -e 's/\([0-9a-f]\{2\}\)/\1 /g')
+
 
 #BOARDNUM=1  #Used 36
 #MACADDRESS=00-1b-21-b3-a9-63
@@ -41,28 +44,42 @@ ramstage-y += oem_auth.c
 #BOARDNUM=2   #Used 104
 #MACADDRESS=be-9b-1d-38-22-f3
 
-BOARDNUM=$(shell printf %d 0x88)
-MACADDRESS=00-90-27-e0-00-d2
+#BOARDNUM=$(shell printf %d 0x88)
+#MACADDRESS=00-90-27-e0-00-d2
 #OTP=
 #00000000  ff ff ff ff ff ff ff ff  ff ff ff ff ff ff ff ff  |................|
 #*
 #00000020  ff 01 ff ff ff ff ff ff  ff ff ff ff ff ff ff ff  |................|
 #00000030  ff ff ff ff ff ff ff ff  ff ff ff ff ff ff ff ff  |................|
 
-BOARDNUM=$(shell printf %d 0x96)
-MACADDRESS=00-90-27-e0-00-d3
+#BOARDNUM=$(shell printf %d 0x36)
+#MACADDRESS=00-1b-21-b3-a9-63
+#ENCRIPTION="ec ac 2a 9a 34 05 7d d4 47 f8 a5 4b 0e e6 b6 af 63 4d a4 61 22 19 2d 0a 6d 53 58 55 9e 9b c1 a9 38 98 9c 68 13 f0 92 5e ca b0 27 ca 65 e5 11 72 69 30 5c c2 16 e4 c8 37 9d 03 35 f5 62 43 35 68"
 
+BOARDNUM=$(shell printf %d 0xE2)
+MACADDRESS=00-90-27-e0-01-3e
+ENCRIPTION="20 16 03 24 23 22 59 99"
 
-
-SHA512SUM=$(if $(shell type sha512sum 2>/dev/null), sha512sum, sha512)
-ENCRIPTION=$(shell echo boardnum$(BOARDNUM) | $(SHA512SUM)  | grep -o "[0-9a-f]*" | sed -e 's/\([0-9a-f]\{2\}\)/\1 /g')
-ENCRIPTION+=$(shell echo $(MACADDRESS) | sed -e 's/-/ /g')
+#################################################
+MACADDRESS_RECORD=$(shell echo $(MACADDRESS) | sed -e 's/-/ /g')
 
 #Extract valiation.bin from final image
 #./build/cbfstool build/coreboot.rom  extract -n olivehill/validation -f validation_read.bin
-$(obj)/validation.bin :$(src)/mainboard/$(MAINBOARDDIR)/Makefile.inc
+$(obj)/otp.bin : $(src)/mainboard/$(MAINBOARDDIR)/Makefile.inc
+	for c in $(call strip_quotes,$(ENCRIPTION)) ; do \
+		printf %d 0x$$c | LC_ALL=C awk '{printf ("%c", $$1);}'; \
+	done >> $@.tmp
+	ls -l $@.tmp | LC_ALL=C awk '{for (i=$$5; i<64; i++) {printf "%c", 255}}' >> $@.tmp
+	mv $@.tmp $@
+
+$(obj)/otp.sh: $(src)/mainboard/$(MAINBOARDDIR)/Makefile.inc
+	echo $(ENCRIPTION) | LC_ALL=C  awk '{i=1; while (i <= NF) {if ((i % 16)==1) printf("\"\ndpcmd --raw-instruction \"B1|06|02|00 00 %02d", i-1); printf(" %s", $$i); i++;} printf("\"\n");}' >> $@.tmp
+	mv $@.tmp $@
+
+$(obj)/validation.bin :$(src)/mainboard/$(MAINBOARDDIR)/Makefile.inc $(obj)/otp.bin $(obj)/otp.sh
 	echo "    VALIDATION $@"
-	for c in $(ENCRIPTION) ; do \
+	cp $(obj)/otp.bin $@.tmp
+	for c in $(MACADDRESS_RECORD) ; do \
 		printf %d 0x$$c | LC_ALL=C awk '{printf ("%c", $$1);}'; \
 	done >> $@.tmp
 	LC_ALL=C awk 'BEGIN {for (i=0;i<8;i++){printf ("%c", 255);}}' >> $@.tmp
