--- a/src/mainboard/amd/olivehill/Makefile.inc
+++ b/src/mainboard/amd/olivehill/Makefile.inc
@@ -57,8 +57,16 @@ SHA512SUM=$(if $(shell type sha512sum 2>/dev/null), sha512sum, sha512)
 #ENCRIPTION="ec ac 2a 9a 34 05 7d d4 47 f8 a5 4b 0e e6 b6 af 63 4d a4 61 22 19 2d 0a 6d 53 58 55 9e 9b c1 a9 38 98 9c 68 13 f0 92 5e ca b0 27 ca 65 e5 11 72 69 30 5c c2 16 e4 c8 37 9d 03 35 f5 62 43 35 68"
 
 # x6 cases
-BOARDNUM=$(shell printf %d 0xE2)
-MACADDRESS=00-90-27-e0-01-3e
+#BOARDNUM=$(shell printf %d 0x20) # SN: 2014080020
+#MACADDRESS=00-90-27-e0-01-43
+#BOARDNUM=$(shell printf %d 0x08) # SN: 2014080008  new tag
+#MACADDRESS=00-90-27-e0-01-44
+#BOARDNUM=$(shell printf %d 0x17) # SN: 2014080017
+#MACADDRESS=00-90-27-e0-01-45
+#BOARDNUM=$(shell printf %d 0x08) # SN: 2014080008  old tag
+#MACADDRESS=00-90-27-e0-01-46
+BOARDNUM=$(shell printf %d 0x19) # SN: 2014080019
+MACADDRESS=00-90-27-e0-01-47
 ENCRIPTION="20 16 03 24 23 22 59 99"
 
 #################################################
