--- a/src/mainboard/amd/olivehill/Kconfig
+++ b/src/mainboard/amd/olivehill/Kconfig
@@ -21,6 +21,8 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	select NORTHBRIDGE_AMD_AGESA_FAMILY16_KB
 	select SOUTHBRIDGE_AMD_AGESA_YANGTZE
 	select HAVE_OPTION_TABLE
+	select USE_OPTION_TABLE
+	select HAVE_CMOS_DEFAULT
 	select HAVE_PIRQ_TABLE
 	select HAVE_MP_TABLE
 	select SUPERIO_WINBOND_W83627DHG
