correct otp value
Change-Id: I7fdc54cfe57934c23588ccf4a990abe9f1db3ff9

--- a/src/mainboard/amd/olivehill/Makefile.inc
+++ b/src/mainboard/amd/olivehill/Makefile.inc
@@ -56,7 +56,8 @@ SHA512SUM=$(if $(shell type sha512sum 2>/dev/null), sha512sum, sha512)
 
 BOARDNUM=$(shell printf %d 0x0C)
 MACADDRESS=FF-FF-FF-FF-FF-FF
-ENCRIPTION="00 00 00 00 00 00 00 00 00 00 00 00 00 00 0A 00 04 00 00 20 00 20 20 02 18 2D 0A 6D 53 58 55 9E 9B C1 A9 38 98 9C 68 13 F0 92 5E CA B0 27 CA 65 E5 11 72 69 30 5C C2 16 E4 C8 37 9D 03 35 F5 62"
+ENCRIPTION="00 00 00 00 00 00 00 00 00 00 00 0A 00 04 00 00 20 00 20 20 02 18 2D 0A 6D 53 58 55 9E 9B C1 A9 38 98 9C 68 13 F0 92 5E CA B0 27 CA 65 E5 11 72 69 30 5C C2 16 E4 C8 37 9D 03 35 F5 62 43 35 68"
+
 
 #################################################
 MACADDRESS_RECORD=$(shell echo $(MACADDRESS) | sed -e 's/-/ /g')
