--- a/src/mainboard/amd/olivehill/Kconfig
+++ b/src/mainboard/amd/olivehill/Kconfig
@@ -26,7 +26,7 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	select SPI_FLASH
 	select HAVE_ACPI_TABLES
 	select BOARD_ROMSIZE_KB_4096
-	select GFXUMA  if ONBOARD_VGA_IS_PRIMARY
+	select GFXUMA
 
 config MAINBOARD_DIR
 	string
