--- a/src/mainboard/amd/leopard/Makefile.inc
+++ b/src/mainboard/amd/leopard/Makefile.inc
@@ -42,8 +42,8 @@ MACADDRESS=FF-FF-FF-FF-FF-FF
 #Unique ID
 #ENCRIPTION = $(call strip_quotes, "5f 5f 46 4d 41 50 5f 5f")
 
-ENCRIPTION = $(call strip_quotes, "D8 63 38 06 43 54 29 38")
-ENCRIPTION += $(call strip_quotes, "D8 65 50 34 DF 59 20 2A")
+ENCRIPTION = $(call strip_quotes, "D8 63 38 06 43 54 29 38")  # vxworks only mac = 60
+ENCRIPTION += $(call strip_quotes, "D8 65 50 34 DF 59 20 2A") # mac = 63
 ENCRIPTION += $(call strip_quotes, "D8 65 50 34 DF 26 3B 22")
 
 # End of Encription
